--- a/AT-Junkyards-Main/Snacker/Snacker.cfg
+++ b/AT-Junkyards-Main/Snacker/Snacker.cfg
@@ -1,4 +1,4 @@
-PART:NEEDS[Snacks]
+PART:NEEDS[Snacks]:AFTER[Snacks]
 {
   name = Snacker
   module = Part
@@ -6,7 +6,7 @@ PART:NEEDS[Snacks]
   //mesh = model.mu
   MODEL
   {
-    model = AtomicTech-Inc.-Junkyards-v.0.15.1/Snacker/Snacker9
+    model = AT-Junkyards-Main/Snacker/Snacker9
   }
   rescaleFactor = 1.0
   node_stack_top = 0.0, 0.799408, -0.545984,  0.0, 1.0, 0.0,  0
