--- a/AT-Junkyards-Main/radioactiveGreenhouse/Parts/PSAGreenhouse375.cfg
+++ b/AT-Junkyards-Main/radioactiveGreenhouse/Parts/PSAGreenhouse375.cfg
@@ -1,8 +1,8 @@
-PART
+PART:NEEDS[Snacks]:AFTER[Snacks]
 {
 	name = PSAGreenhouse375
 	module = Part
-	author = panarchist
+	author = panarchist, Atomikku
 	
 	MODEL
 	{
@@ -18,9 +18,9 @@ PART
 	cost = 8000
 	category = Utility
 	subcategory = 0
-	title = PSA Greenhouse (3.75m)
+	title = GR33-I7 "Fry Archivist" Greenhouse
 	manufacturer = Panarchist Space Alliance
-	description = The PSA Greenhouse is a rigid greenhouse for growning fresh food. Opening the shutters allows the greenhouse to use sunlight in addition to the onboard lighting and reduce EC use. Designed by the legendary zzz.
+	description = The 3.75 Meter Fry Archivist Greenhouse is a rigid greenhouse for growning fresh food. Opening the shutters allows the greenhouse to use sunlight in addition to the onboard lighting and reduce EC use. Designed by the legendary zzz and adapted for use in AtomicTech Inc. Junkyards by Atomikku.
 	
 	tags = PSA panarchist lifesupport eclss usi-ls snacks tac-ls cck-lifesupport
 
@@ -94,4 +94,163 @@ PART
 
 	vesselType = Station
 	
+  RESOURCE
+  {
+    name = Snacks
+    amount = 10
+    maxAmount = 10
+  }
+  RESOURCE
+  {
+    name = Soil
+    amount = 10
+    maxAmount = 10
+  }
+  MODULE
+  {
+    name = SoilRecycler
+    ConverterName = Snack Regenerator [Soil]
+    StartActionName = Start Regenerator [Soil]
+    StopActionName = Stop Regenerator [Soil]
+    AutoShutdown = false
+    GeneratesHeat = false
+    UseSpecialistBonus = true
+    ExperienceEffect = ConverterSkill
+    EfficiencyBonus = 1.0
+    RecyclerCapacity = 4
+    INPUT_RESOURCE
+    {
+      ResourceName = Soil
+      Ratio = 0.00004630
+      FlowMode = ALL_VESSEL
+    }
+    INPUT_RESOURCE
+    {
+      ResourceName = ElectricCharge
+      Ratio = 3
+      FlowMode = STAGE_PRIORITY_FLOW
+    }
+    OUTPUT_RESOURCE
+    {
+      ResourceName = Snacks
+      Ratio = 0.00010740
+      DumpExcess = false
+      FlowMode = ALL_VESSEL
+    }
+  }
+  MODULE
+  {
+    name = SoilRecycler
+    ConverterName = Snack Regenerator [Soil + WasteF]
+    StartActionName = Start Regenerator [Soil + WasteF]
+    StopActionName = Stop Regenerator [Soil + WasteF]
+    AutoShutdown = false
+    GeneratesHeat = false
+    UseSpecialistBonus = true
+    ExperienceEffect = ConverterSkill
+    EfficiencyBonus = 1.0
+    RecyclerCapacity = 4
+    INPUT_RESOURCE
+    {
+      ResourceName = Soil
+      Ratio = 0.00004630
+      FlowMode = ALL_VESSEL
+    }
+    INPUT_RESOURCE
+    {
+      ResourceName = ElectricCharge
+      Ratio = 3
+      FlowMode = STAGE_PRIORITY_FLOW
+    }
+    INPUT_RESOURCE
+    {
+      ResourceName = WasteF
+      Ratio = 0.1
+      FlowMode = STAGE_PRIORITY_FLOW
+    }
+    OUTPUT_RESOURCE
+    {
+      ResourceName = Snacks
+      Ratio = 0.00020740
+      DumpExcess = false
+      FlowMode = ALL_VESSEL
+    }
+  }
+  MODULE
+  {
+    name = SoilLN2Recycler
+    ConverterName = Snack Regenerator [Soil + LN2]
+    StartActionName = Start Process [Soil + LN2]
+    StopActionName = Stop Process [Soil + LN2]
+    AutoShutdown = false
+    GeneratesHeat = false
+    UseSpecialistBonus = true
+    ExperienceEffect = ConverterSkill
+    EfficiencyBonus = 1.0
+    RecyclerCapacity = 4
+    INPUT_RESOURCE
+    {
+      ResourceName = Soil
+      Ratio = 0.00004630
+      FlowMode = ALL_VESSEL
+    }
+    INPUT_RESOURCE
+    {
+      ResourceName = ElectricCharge
+      Ratio = 3
+      FlowMode = STAGE_PRIORITY_FLOW
+    }
+    INPUT_RESOURCE
+    {
+      ResourceName = LN2
+      Ratio = 0.1
+      FlowMode = STAGE_PRIORITY_FLOW
+    }
+    OUTPUT_RESOURCE
+    {
+      ResourceName = Snacks
+      Ratio = 0.00025740
+      DumpExcess = false
+      FlowMode = ALL_VESSEL
+    }
+  }
+  MODULE
+  {
+    name = SoilLN2WasteFRecycler
+    ConverterName = Snack Regenerator [Soil + LN2 + WasteF]
+    StartActionName = Start Process [Soil + LN2 + WasteF]
+    StopActionName = Stop Process [Soil + LN2 + WasteF]
+    AutoShutdown = false
+    GeneratesHeat = false
+    UseSpecialistBonus = true
+    ExperienceEffect = ConverterSkill
+    EfficiencyBonus = 1.0
+    RecyclerCapacity = 4
+    INPUT_RESOURCE
+    {
+      ResourceName = Soil
+      Ratio = 0.00005530
+      FlowMode = ALL_VESSEL
+    }
+    INPUT_RESOURCE
+    {
+      ResourceName = ElectricCharge
+      Ratio = 3.1
+      FlowMode = STAGE_PRIORITY_FLOW
+    }
+    INPUT_RESOURCE
+    {
+      ResourceName = LN2
+      Ratio = 0.1
+      FlowMode = STAGE_PRIORITY_FLOW
+    }
+    OUTPUT_RESOURCE
+    {
+      ResourceName = Snacks
+      Ratio = 0.0095
+      DumpExcess = false
+      FlowMode = ALL_VESSEL
+    }
+  }
+
 }
