--- a/AT-Junkyards-Main/radioactiveGreenhouse/Parts/PSAGreenhouse25.cfg
+++ b/AT-Junkyards-Main/radioactiveGreenhouse/Parts/PSAGreenhouse25.cfg
@@ -133,7 +133,7 @@ PART:NEEDS[Snacks]:AFTER[Snacks]
     		OUTPUT_RESOURCE
     		{
       			ResourceName = Snacks
-      			Ratio = 0.00010740
+      			Ratio = Ratio = 0.0045
       			DumpExcess = false
       			FlowMode = ALL_VESSEL
     	}
