--- a/AT-Junkyards-Main/radioactiveGreenhouse/Parts/PSAGreenhouse25.cfg
+++ b/AT-Junkyards-Main/radioactiveGreenhouse/Parts/PSAGreenhouse25.cfg
@@ -63,7 +63,6 @@ PART:NEEDS[Snacks]:AFTER[Snacks]
 			key = 0 0 0 0
 		}
 	}
-
 	MODULE
 	{
 		name = ModuleGenerator
@@ -121,7 +120,7 @@ PART:NEEDS[Snacks]:AFTER[Snacks]
     		INPUT_RESOURCE
     		{
       			ResourceName = Soil
-      			Ratio = 0.00004630
+      			Ratio = 0.0001
       			FlowMode = ALL_VESSEL
     		}
    		INPUT_RESOURCE
@@ -137,5 +136,4 @@ PART:NEEDS[Snacks]:AFTER[Snacks]
       			DumpExcess = false
       			FlowMode = ALL_VESSEL
     	}
-  }
 }
