Update and rename PSAGreenhouse375.cfg to PSAGreenhouse375M.cfg

--- a/AT-Junkyards-Main/radioactiveGreenhouse/Parts/PSAGreenhouse375M.cfg
+++ b/AT-Junkyards-Main/radioactiveGreenhouse/Parts/PSAGreenhouse375M.cfg
@@ -19,7 +19,7 @@ PART:NEEDS[Snacks]:AFTER[Snacks]
 	category = Utility
 	subcategory = 0
 	title = GR33-I7 "Fry Archivist" Greenhouse
-	manufacturer = Panarchist Space Alliance
+	manufacturer = AtomicTech Inc.
 	description = The 3.75 Meter Fry Archivist Greenhouse is a rigid greenhouse for growning fresh food. Opening the shutters allows the greenhouse to use sunlight in addition to the onboard lighting and reduce EC use. Designed by the legendary zzz and adapted for use in AtomicTech Inc. Junkyards by Atomikku.
 	
 	tags = PSA panarchist lifesupport eclss usi-ls snacks tac-ls cck-lifesupport
@@ -121,7 +121,7 @@ PART:NEEDS[Snacks]:AFTER[Snacks]
     	INPUT_RESOURCE
     	{
       		ResourceName = Soil
-      		Ratio = 0.00004630
+      		Ratio = 0.0004
       		FlowMode = ALL_VESSEL
     	}
     	INPUT_RESOURCE
@@ -133,7 +133,7 @@ PART:NEEDS[Snacks]:AFTER[Snacks]
     	OUTPUT_RESOURCE
     	{
       		ResourceName = Snacks
-      		Ratio = 0.009
+      		Ratio = 0.0225
       		DumpExcess = false
       		FlowMode = ALL_VESSEL
     	}
