--- a/AT-Junkyards-Main/radioactiveGreenhouse/Parts/ATGreenhouse5M.cfg
+++ b/AT-Junkyards-Main/radioactiveGreenhouse/Parts/ATGreenhouse5M.cfg
@@ -14,15 +14,15 @@ PART:NEEDS[Snacks]:AFTER[Snacks]
 	node_attach = 1.875,0.0,0.0,1.0,0.0,0.0,1
 	
 	TechRequired = advConstruction
-	entryCost = 8100
-	cost = 8000
+	entryCost = 0
+	cost = 32000
 	category = Utility
 	subcategory = 0
 	title = Orbital "Veggie Table" Greenhouse Module
 	manufacturer = AtomicTech Inc.
-	description = The 5 Meter Fry Archivist Greenhouse is a rigid greenhouse for growning fresh food. Opening the shutters allows the greenhouse to use sunlight in addition to the onboard lighting and reduce EC use. Designed by the legendary zzz and adapted for use in AtomicTech Inc. Junkyards by Atomikku.
+	description = The 5 Meter Fry Archivist Greenhouse is a rigid greenhouse for growning fresh food. Opening the shutters allows the greenhouse to use sunlight in addition to the onboard lighting and reduce EC use. The insane size and weight of this module makes it neary impractical to launch it into orbit. SimpleConstrution or Extraplanetary Launch Pads is recommended to send this into orbit.
 	
-	tags = PSA panarchist lifesupport eclss usi-ls snacks tac-ls cck-lifesupport
+	tags = PSA panarchist lifesupport snacks atomic tech atomictech at green house greenhouse garden
 
 	attachRules = 1,1,1,1,0
 	mass = 10
@@ -30,10 +30,10 @@ PART:NEEDS[Snacks]:AFTER[Snacks]
 	maximum_drag = 0.3
 	minimum_drag = 0.2
 	angularDrag = 2
-	crashTolerance = 8
+	crashTolerance = 20
 	breakingForce = 500
 	breakingTorque= 500
-	maxTemp = 1800
+	maxTemp = 2000
 	bulkheadProfiles = size3
 	CrewCapacity = 2
 
@@ -97,14 +97,14 @@ PART:NEEDS[Snacks]:AFTER[Snacks]
   	RESOURCE
   	{
     		name = Snacks
-    		amount = 10
-    		maxAmount = 10
+    		amount = 10000
+    		maxAmount = 10000
   	}
   	RESOURCE
   	{
     		name = Soil
-    		amount = 10
-    		maxAmount = 10
+    		amount = 1000
+    		maxAmount = 1000
   	}
   	MODULE
   	{
