--- a/AT-Junkyards-Main/radioactiveGreenhouse/Parts/PSAGreenhouse375M.cfg
+++ b/AT-Junkyards-Main/radioactiveGreenhouse/Parts/PSAGreenhouse375M.cfg
@@ -14,26 +14,25 @@ PART:NEEDS[Snacks]:AFTER[Snacks]
 	node_attach = 1.875,0.0,0.0,1.0,0.0,0.0,1
 	
 	TechRequired = advConstruction
-	entryCost = 8100
-	cost = 8000
+	entryCost = 0
+	cost = 17000
 	category = Utility
 	subcategory = 0
 	title = GR33-I7 "Fry Archivist" Greenhouse
 	manufacturer = AtomicTech Inc.
-	description = The 3.75 Meter Fry Archivist Greenhouse is a rigid greenhouse for growning fresh food. Opening the shutters allows the greenhouse to use sunlight in addition to the onboard lighting and reduce EC use. Designed by the legendary zzz and adapted for use in AtomicTech Inc. Junkyards by Atomikku.
+	description = The 3.75 Meter Fry Archivist Greenhouse is a rigid greenhouse for growning fresh food. Opening the shutters allows the greenhouse to use sunlight in addition to the onboard lighting and reduce EC use. Although this module isn't as impractically heavy as the five meter variant, it\'s recommended that this module be assembled in orbit by SimpleConstruction or Extraplanetary Launch Pads.
 	
-	tags = PSA panarchist lifesupport eclss usi-ls snacks tac-ls cck-lifesupport
-
+	tags = PSA panarchist lifesupport snacks at atomictech atomic tech green house greenhouse fresh
 	attachRules = 1,1,1,1,0
-	mass = 4.938
+	mass = 8
 	dragModelType = default
 	maximum_drag = 0.3
 	minimum_drag = 0.2
 	angularDrag = 2
-	crashTolerance = 8
+	crashTolerance = 15
 	breakingForce = 500
 	breakingTorque= 500
-	maxTemp = 1800
+	maxTemp = 2000
 	bulkheadProfiles = size3
 	CrewCapacity = 2
 
@@ -88,8 +87,8 @@ PART:NEEDS[Snacks]:AFTER[Snacks]
 	RESOURCE
 	{
 		name = ElectricCharge
-		amount = 3000
-		maxAmount = 3000
+		amount = 2250
+		maxAmount = 2250
 	}
 
 	vesselType = Station
@@ -97,14 +96,14 @@ PART:NEEDS[Snacks]:AFTER[Snacks]
   	RESOURCE
   	{
     		name = Snacks
-    		amount = 10
-    		maxAmount = 10
+    		amount = 7500
+    		maxAmount = 7500
   	}
   	RESOURCE
   	{
     		name = Soil
-    		amount = 10
-    		maxAmount = 10
+    		amount = 750
+    		maxAmount = 750
   	}
   	MODULE
   	{
