--- a/AT-Junkyards-Main/radioactiveGreenhouse/Parts/PSAGreenhouse25.cfg
+++ b/AT-Junkyards-Main/radioactiveGreenhouse/Parts/PSAGreenhouse25.cfg
@@ -14,26 +14,26 @@ PART:NEEDS[Snacks]:AFTER[Snacks]
 	node_attach = 1.25,0.0,0.0,1.0,0.0,0.0,1
 	
 	TechRequired = advConstruction
-	entryCost = 8100
-	cost = 8000
+	entryCost = 0
+	cost = 10000
 	category = Utility
 	subcategory = 0
 	title = GR33-17 "Panarchist" Greenhouse
 	manufacturer = AtomicTech Inc.
-	description = The 2.5 Meter Panarchist Greenhouse is a rigid greenhouse for growning fresh food. Opening the shutters allows the greenhouse to use sunlight in addition to the onboard lighting and reduce EC use. Designed by the legendary zzz and adapted for use in AtomicTech Inc. Junkyards by Atomikku.
+	description = The 2.5 Meter Panarchist Greenhouse is a rigid greenhouse for growning fresh food. Opening the shutters allows the greenhouse to use sunlight in addition to the onboard lighting and reduce EC use.
 	
-	tags = PSA panarchist lifesupport eclss usi-ls snacks tac-ls cck-lifesupport atomic tech atomictech green greenhouse
+	tags = PSA panarchist lifesupport snacks atomic tech atomictech green greenhouse at 
 
 	attachRules = 1,1,1,1,0
-	mass = 2.383
+	mass = 5
 	dragModelType = default
 	maximum_drag = 0.3
 	minimum_drag = 0.2
-	angularDrag = 2
+	angularDrag = 15
 	crashTolerance = 8
 	breakingForce = 500
 	breakingTorque= 500
-	maxTemp = 1800
+	maxTemp = 2000
 	bulkheadProfiles = size2
 	CrewCapacity = 2
 
@@ -87,8 +87,8 @@ PART:NEEDS[Snacks]:AFTER[Snacks]
 	RESOURCE
 	{
 		name = ElectricCharge
-		amount = 1000
-		maxAmount = 1000
+		amount = 1500
+		maxAmount = 1500
 	}
 
 	vesselType = Station
@@ -96,14 +96,14 @@ PART:NEEDS[Snacks]:AFTER[Snacks]
         RESOURCE
         {
           name = Snacks
-          amount = 10
-          maxAmount = 10
+          amount = 5000
+          maxAmount = 5000
         }
         RESOURCE
         {
           name = Soil
-          amount = 10
-          maxAmount = 10
+          amount = 500
+          maxAmount = 500
         }
   	MODULE
   	{
