--- a/AT-Junkyards-Main/radioactiveGreenhouse/Parts/PSAGreenhouse25.cfg
+++ b/AT-Junkyards-Main/radioactiveGreenhouse/Parts/PSAGreenhouse25.cfg
@@ -20,12 +20,12 @@ PART:NEEDS[Snacks]:AFTER[Snacks]
 	subcategory = 0
 	title = GR33-17 "Panarchist" Greenhouse
 	manufacturer = AtomicTech Inc.
-	description = The 2.5 Meter Panarchist Greenhouse is a rigid greenhouse for growning fresh food. Opening the shutters allows the greenhouse to use sunlight in addition to the onboard lighting and reduce EC use.
+	description = The 2.5 Meter Panarchist Greenhouse is a rigid greenhouse for growning fresh food. Opening the shutters allows the greenhouse to use an advanced type of bioelectricity generator..
 	
 	tags = PSA panarchist lifesupport snacks atomic tech atomictech green greenhouse at 
 
 	attachRules = 1,1,1,1,0
-	mass = 5
+	mass = 4.5
 	dragModelType = default
 	maximum_drag = 0.3
 	minimum_drag = 0.2
@@ -53,7 +53,7 @@ PART:NEEDS[Snacks]:AFTER[Snacks]
 		raycastTransformName = glass
 		pivotName = glass
 		isBreakable = false
-		resourceName = Light
+		resourceName = ElectricCharge
 		chargeRate = 2.2
 		powerCurve
 		{
