--- a/AT-Junkyards-Main/radioactiveGreenhouse/Parts/PSAGreenhouse25.cfg
+++ b/AT-Junkyards-Main/radioactiveGreenhouse/Parts/PSAGreenhouse25.cfg
@@ -20,7 +20,7 @@ PART:NEEDS[Snacks]:AFTER[Snacks]
 	subcategory = 0
 	title = GR33-17 "Panarchist" Greenhouse
 	manufacturer = AtomicTech Inc.
-	description = The 2.5 Meter Panarchist Greenhouse is a rigid greenhouse for growning fresh food. Opening the shutters allows the greenhouse to use an advanced type of bioelectricity generator..
+	description = The 2.5 Meter Panarchist Greenhouse is a rigid greenhouse for growning fresh food. Opening the shutters allows the greenhouse to use an advanced type of bioelectricity generator.
 	
 	tags = PSA panarchist lifesupport snacks atomic tech atomictech green greenhouse at 
 
