--- a/AT-Junkyards-Main/radioactiveGreenhouse/Parts/ATGreenhouse5M.cfg
+++ b/AT-Junkyards-Main/radioactiveGreenhouse/Parts/ATGreenhouse5M.cfg
@@ -20,7 +20,7 @@ PART:NEEDS[Snacks]:AFTER[Snacks]
 	subcategory = 0
 	title = Orbital "Veggie Table" Greenhouse Module
 	manufacturer = AtomicTech Inc.
-	description = The 5 Meter Fry Archivist Greenhouse is a rigid greenhouse for growning fresh food. Opening the shutters allows the greenhouse to use an advanced type of bioelectricity generator. The insane size and weight of this module makes it neary impractical to launch it into orbit. SimpleConstrution or Extraplanetary Launch Pads is recommended to send this into orbit.
+	description = The 5 Meter Fry Archivist Greenhouse is a rigid greenhouse for growning fresh food. Opening the shutters allows the greenhouse to use an advanced type of bioelectricity generator. The insane size and weight of this module makes it neary impractical to launch it into orbit. SimpleConstrution or Extraplanetary Launch Pads is recommended to assemble this in orbit.
 	
 	tags = PSA panarchist lifesupport snacks atomic tech atomictech at green house greenhouse garden
 
