--- a/AT-Junkyards-Main/radioactiveGreenhouse/Parts/PSAGreenhouse375M.cfg
+++ b/AT-Junkyards-Main/radioactiveGreenhouse/Parts/PSAGreenhouse375M.cfg
@@ -20,7 +20,7 @@ PART:NEEDS[Snacks]:AFTER[Snacks]
 	subcategory = 0
 	title = GR33-I7 "Fry Archivist" Greenhouse
 	manufacturer = AtomicTech Inc.
-	description = The 3.75 Meter Fry Archivist Greenhouse is a rigid greenhouse for growning fresh food. Opening the shutters allows the greenhouse to use an advanced type of bioelectricity generator. Although this module isn't as impractically heavy as the five meter variant, it\'s recommended that this module be assembled in orbit by SimpleConstruction or Extraplanetary Launch Pads.
+	description = The 3.75 Meter Fry Archivist Greenhouse is a rigid greenhouse for growning fresh food. Opening the shutters allows the greenhouse to use an advanced type of bioelectricity generator. Although this module isn\'t as impractically heavy as the five meter variant, it\'s recommended that this module be assembled in orbit by SimpleConstruction or Extraplanetary Launch Pads.
 	
 	tags = PSA panarchist lifesupport snacks at atomictech atomic tech green house greenhouse fresh
 	attachRules = 1,1,1,1,0
