--- a/AT-Junkyards-Main/stockishConfigs/raptorReliant.cfg
+++ b/AT-Junkyards-Main/stockishConfigs/raptorReliant.cfg
@@ -12,11 +12,14 @@
   {
     @minThrust = 0
     @maxThrust = 865
-    @atmosphereCurve
+    !atmosphereCurve
     {
-      @key = 0 375
-      @key = 1 280
-      @key = 7 50
+    }
+    atmosphereCurve
+    {
+      key = 0 375
+      key = 1 280
+      key = 7 50
     }
   }
 }
