--- a/AT-Junkyards-Main/stockishConfigs/swivelingRaptor.cfg
+++ b/AT-Junkyards-Main/stockishConfigs/swivelingRaptor.cfg
@@ -12,11 +12,15 @@
   {
     @minThrust = 0
     @maxThrust = 850
-    @atmosphereCurve
+    !atmosphereCurve
     {
-      @key = 0 355
-      @key = 1 295
-      @key = 6 100
+    }
+    atmosphereCurve
+    {
+      key = 0 355
+      key = 1 295
+      key = 6 100
+      key = 10 1
     }
   }
 }
