--- a/AT-Junkyards-Main/xenonOTron/nitroVernor.cfg
+++ b/AT-Junkyards-Main/xenonOTron/nitroVernor.cfg
@@ -1,6 +1,6 @@
 PART[vernierEngine]
 {
-  @name = nitroVerner
+  	@name = nitroVerner
 	@cost = 1600
 	@title = AT-NTRO Advanced RCS Engine
 	@manufacturer = AtomicTech Inc.
@@ -17,11 +17,14 @@ PART[vernierEngine]
 			@DrawGauge = True
 			@resourceFlowMode = STAGE_PRIORITY_FLOW
 		}
-		@atmosphereCurve
+		!atmosphereCurve
 		{
-			@key = 0 220
-			@key = 1 120
-			@key = 5 0.001
+		}
+		atmosphereCurve
+		{
+			key = 0 220
+			key = 1 120
+			key = 5 0.001
 		}
 	}
 }
