--- a/AT-Junkyards-Main/MoreNuke/MainsailNuke/liquidEngineMainsailClassic.cfg
+++ b/AT-Junkyards-Main/MoreNuke/MainsailNuke/liquidEngineMainsailClassic.cfg
@@ -18,10 +18,10 @@ PART
 	TechRequired = nuclearPropulsion
 	TechHidden = false
 	entryCost = 0
-	cost = 300000
+	cost = 56000
 	category = Engine
 	subcategory = 0
-	title = AT-TREL "Nuclear Turbosail" Gas Core Thermonuclear Rocket Engine
+	title = AT-TREL "Turbosail" Gas Core Thermonuclear Rocket Engine
 	manufacturer = AtomicTech Inc.
 	description = The Closed Cycle Gas-Core design overcomes the limits of Solid Core NTR's by deliberately letting the Reactor melt and vaporize, reaching much higher core temperatures and exhaust velocities, which grants this rocket an enoromous ISP of 1500s. No radioactive material leaves the engine though, the vaporized nuclear material is safely confined within a series of toroidal quartz chambers, which let most of the thermal radiation through to the propellant and prevent it from wrecking havoc of the rest of the machinery. A sophisticated system of active cooling and a steady vortex stream of Xenon Gas around the fissioning nuclear plasma that keeps it from touching the walls prevent the quartz bulbs from spontaneously vaporizing. The concept sounds particularly dangerous, but as with everything in life, the coolness of things is directly proportional to their danger.
 	attachRules = 1,0,1,0,0
@@ -33,7 +33,7 @@ PART
 	maximum_drag = 0.2
 	minimum_drag = 0.2
 	angularDrag = 2
-	crashTolerance = 5
+	crashTolerance = 3.75
 	breakingForce = 200
 	breakingTorque = 200
 	maxTemp = 2200 
@@ -46,8 +46,8 @@ PART
 		exhaustDamage = True
 		ignitionThreshold = 0.1
 		minThrust = 0
-		maxThrust = 300
-		heatProduction = 300
+		maxThrust = 450
+		heatProduction = 2750
 		fxOffset = 0, 0, 1.5
 		EngineType = LiquidFuel
 		exhaustDamageDistanceOffset = 0.56
@@ -61,7 +61,7 @@ PART
 		{
 			key = 0 1500
 			key = 1 500
-      key = 2 250
+			key = 2 250
 			key = 9 0.001
 		}
 	}
@@ -98,16 +98,16 @@ PART
 			rate = 12.0
 		}
 	}
-  MODULE
-  {
-    name = ModuleGenerator
-    isAlwaysActive = true
-    OUTPUT_RESOURCE
-    {
-      name = ElectricCharge
-      rate = 0.75
-    }
-  }
+	MODULE
+	{
+		name = ModuleGenerator
+		isAlwaysActive = true
+		OUTPUT_RESOURCE
+		{
+			name = ElectricCharge
+			rate = 0.75
+		}
+ 	}
 	MODULE
 	{
 		name = ModuleSurfaceFX
