--- a/AT-Junkyards-Main/stockishConfigs/raptorReliant.cfg
+++ b/AT-Junkyards-Main/stockishConfigs/raptorReliant.cfg
@@ -2,7 +2,8 @@
 
 @PART[liquidEngine]
 {
-  @TechHidden = False
+  !TechHidden = 
+  TechHidden = False
   @mass = 4.25
   @title = "LV-T50 \"Raptor Reliant"\ Liquid Fuel Engine"
   @manufacturer = AtomicTech Inc.
