--- a/AT-Junkyards-Main/stockishConfigs/swivelingRaptor.cfg
+++ b/AT-Junkyards-Main/stockishConfigs/swivelingRaptor.cfg
@@ -2,7 +2,8 @@
 
 @PART[liquidEngine2]
 {
-  @TechHidden = False
+  !TechHidden = 
+  TechHidden = False
   @mass = 4
   @title = "LV-T60 \"Swiveling Raptor\" Liquid Fuel Engine"
   @manufacturer = "AtomicTech Inc."
