--- a/AT-Junkyards-Main/1875Expansion/SnarkParts/cabin_1p5/cabin1p5Reg.cfg
+++ b/AT-Junkyards-Main/1875Expansion/SnarkParts/cabin_1p5/cabin1p5Reg.cfg
@@ -14,14 +14,14 @@ PART
 	CrewCapacity = 1
 	TechRequired = spaceExploration
 	entryCost = 0
-	cost = 2500
+	cost = 2000
 	category = Utility
 	subcategory = 0
-	title = Mobile Laboratory "Depressing Cubicle" MPL-1875
+	title = Mobile Habitation Unit "Big Box" CLS-1875
 	manufacturer = AtomicTech Inc.
-	description = A member of the engineering team paid a visit to the AtomicTech Inc. Laboratories looking for a scientist who could help her with designing a new thermonuclear rocket engine. Upon entering the data entry wing of the building, our engineer was greeted to rows and rows of depressing cubicles. Struck with inspiration, she rushed back to the Von Kerman Institute of Engineering, where the AtomicTech Inc. Engineering Offices are located, and quickly gathered a team of engineers. They worked day and night, going through countless iterations, until arriving upon the final product. A recased Mark-1 Lander Can in a downsized Hitchhicker fairing and packed with scientific data analysis and collection tools and an assorted collection of chemicals and lab tools.
+	description = The Inventor of the Depressing Cubicle realized that they could remove the massive amount of scientific equipment in the module and rework it and replace it with habitable space. They filled a jar with scraps of paper and grabbed three at random. The team decided to add a remote control ability, an experiment storage unit, and an integrate fuel cell array.
 	attachRules = 1,0,1,1,0
-	mass = 2
+	mass = 2.5
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.3
@@ -36,7 +36,7 @@ PART
 	tags = can mark hitchhiker chemical lab tools science data processing
 	INTERNAL
 	{
-		name = landerCabinSmallInternal
+		name = KV2_IVA
 	}
 	MODULE
 	{
@@ -108,137 +108,6 @@ PART
 		InventorySlots = 12
 		packedVolumeLimit = 1000
 	}
-  
-  MODULE
-	{
-		name = ModuleEnviroSensor
-		sensorType = ACC
-	}
-  MODULE
-  {
-		name = ModuleScienceExperiment
-		experimentID = seismicScan
-		experimentActionName = Log Seismic Data
-		resetActionName = Delete Data
-		useStaging = False
-		useActionGroups = True
-		hideUIwhenUnavailable = False
-		xmitDataScalar = 0.45
-		dataIsCollectable = True
-		collectActionName = Take Data
-		interactionRange = 1.5
-		rerunnable = True
-		usageReqMaskInternal = 1
-		usageReqMaskExternal = 8
-	}
-  MODULE
-	{
-		name = ModuleEnviroSensor
-		sensorType = TEMP
-	}
-	MODULE
-	{
-		name = ModuleScienceExperiment
-		experimentID = temperatureScan
-		experimentActionName = Log Temperature
-		resetActionName = Delete Data
-		useStaging = False
-		useActionGroups = True
-		hideUIwhenUnavailable = False
-		xmitDataScalar = 0.5
-		dataIsCollectable = True
-		collectActionName = Take Data
-		interactionRange = 1.5
-		rerunnable = True
-		usageReqMaskInternal = 1
-		usageReqMaskExternal = 8
-	}
-  MODULE
-	{
-		name = ModuleEnviroSensor
-		sensorType = PRES
-	}
-	MODULE
-	{
-		name = ModuleScienceExperiment
-		experimentID = barometerScan
-		experimentActionName = Log Pressure Data
-		resetActionName = Delete Data
-		useStaging = False
-		useActionGroups = True
-		hideUIwhenUnavailable = False
-		xmitDataScalar = 0.5
-		dataIsCollectable = True
-		collectActionName = Take Data
-		interactionRange = 1.5
-		rerunnable = True
-		usageReqMaskInternal = 1
-		usageReqMaskExternal = 8
-	}
-  MODULE
-	{
-		name = ModuleEnviroSensor
-		sensorType = GRAV
-	}
-	MODULE
-	{
-		name = ModuleScienceExperiment
-		experimentID = gravityScan
-		experimentActionName = Log Gravity Data
-		resetActionName = Delete Data
-		useStaging = False
-		useActionGroups = True
-		hideUIwhenUnavailable = False
-		xmitDataScalar = 0.4
-		dataIsCollectable = True
-		collectActionName = Take Data
-		interactionRange = 1.5
-		rerunnable = True
-		usageReqMaskInternal = 1
-		usageReqMaskExternal = 8
-	}
-  MODULE
-	{
-		name = ModuleScienceContainer
-		reviewActionName = Review Data
-		storeActionName = Store Experiments
-		collectActionName = Take Data
-		evaOnlyStorage = True
-		storageRange = 2
-		allowRepeatedSubjects = True
-	}
-	MODULE
-	{
-		name = ModuleScienceLab
-		containerModuleIndex = 0
-		dataStorage = 750
-		crewsRequired = 1
-		canResetConnectedModules = True
-		canResetNearbyModules = True
-		interactionRange = 5
-		SurfaceBonus = 0.1
-		ContextBonus = 0.25
-		homeworldMultiplier = 0.1
-		RESOURCE_PROCESS
-		{
-			name = ElectricCharge
-			amount = 10
-		}
-	}
-
-	MODULE
-	{
-		name = ModuleScienceConverter
-		dataProcessingMultiplier = 0.5 // Multiplier to data processing rate and therefore science rate
-		scientistBonus = 0.25 // Bonus per scientist star - need at least one! So 0.25x - 2.5x
-		researchTime = 7 // Larger = slower. Exponential!
-		scienceMultiplier = 5 // How much science does data turn into?
-		scienceCap = 500 // How much science can we store before having to transmit?		
-		powerRequirement = 5 // EC / Sec to research
-		ConverterName = Research
-		StartActionName = Start Research
-		StopActionName = Stop Research
-	}
 
 	MODULE
 	{
@@ -259,16 +128,73 @@ PART
 
 	MODULE
 	{
-    name = ModuleExperienceManagement
-    costPerKerbal = 0
+		name = ModuleExperienceManagement
+		costPerKerbal = 0
 	}
+	MODULE
+	{
+		name = ModuleProbeControlPoint
+		minimumCrew = 1
+		multiHop = True
+	}
+	MODULE
+	{
+		name = ModuleResourceConverter
+		ConverterName = Fuel Cell
+		StartActionName = Start Fuel Cell
+		StopActionName = Stop Fuel Cell
+		ToggleActionName = Toggle Fuel Cell
+		FillAmount = 0.99
+		AutoShutdown = false
+		GeneratesHeat = false
+		UseSpecialistBonus = false
 
+		 
+		INPUT_RESOURCE
+		{
+			ResourceName = LiquidFuel
+			Ratio = 0.02025
+			FlowMode = STAGE_PRIORITY_FLOW
+  		}
+		INPUT_RESOURCE
+		{
+			ResourceName = Oxidizer
+			Ratio = 0.02475
+			FlowMode = STAGE_PRIORITY_FLOW
+		}
+		OUTPUT_RESOURCE
+		{
+			ResourceName = ElectricCharge
+			Ratio = 18
+			DumpExcess = false
+		}
+	}
+	
+	MODULE
+	{
+		name = ModuleDataTransmitter
+		antennaType = RELAY
+		packetInterval = 0.35
+		packetSize = 2
+		packetResourceCost = 18.0
+		requiredResource = ElectricCharge
+		DeployFxModules = 0
+		antennaPower = 4750000
+		antennaCombinable = True
+	}
+	
+	RESOURCE
+	{
+		name = ElectricCharge
+		amount = 300
+		maxAmount = 300
+	}
 
 }
 
 
 // IndicatorLights support (add crew indicators).
-@PART[crewCabin_1p5]:NEEDS[IndicatorLights]
+@PART[microCrewAtomicTech]:NEEDS[IndicatorLights]
 {
 	//-------------------------------------------------------------------------
 	// INDICATOR MESHES
@@ -331,26 +257,26 @@ PART
 
 	MODULE {
 		name = ModuleCrewIndicator
-	    controllerName = crewController0
+	    	controllerName = crewController0
 		toggleName = indicatorToggle
 	}
 
 	MODULE {
 		name = ModuleCrewIndicator
-	    controllerName = crewController1
+	    	controllerName = crewController1
 		toggleName = indicatorToggle
 	}
 
 	MODULE {
 		name = ModuleCrewIndicator
-	    controllerName = crewController2
+	    	controllerName = crewController2
 		toggleName = indicatorToggle
 	}
 
     MODULE
     {
         name = ModuleScienceAvailabilityIndicator
-		controllerName = availability0
+	controllerName = availability0
         experimentID = crewReport
         lowValueColor = crewController0
         mediumValueColor = highValueColor
@@ -360,7 +286,7 @@ PART
     MODULE
     {
         name = ModuleScienceAvailabilityIndicator
-		controllerName = availability1
+	controllerName = availability1
         experimentID = crewReport
         lowValueColor = crewController1
         mediumValueColor = highValueColor
@@ -370,33 +296,32 @@ PART
     MODULE
     {
         name = ModuleScienceAvailabilityIndicator
-		controllerName = availability2
+	controllerName = availability2
         experimentID = crewReport
         lowValueColor = crewController2
         mediumValueColor = highValueColor
         highValueColor = blink(lowValueColor, 200, $Off, 200)
     }
-
-	MODULE {
+    MODULE {
 		name = ModuleScienceDataIndicator
-        experimentID = crewReport
-        emissiveName = indicator0
+        	experimentID = crewReport
+        	emissiveName = indicator0
 		dataColor = crewController0
 		emptyColor = availability0
 	}
 
 	MODULE {
 		name = ModuleScienceDataIndicator
-        experimentID = crewReport
-        emissiveName = indicator1
+        	experimentID = crewReport
+        	emissiveName = indicator1
 		dataColor = crewController1
 		emptyColor = availability1
 	}
 
 	MODULE {
 		name = ModuleScienceDataIndicator
-        experimentID = crewReport
-        emissiveName = indicator2
+        	experimentID = crewReport
+        	emissiveName = indicator2
 		dataColor = crewController2
 		emptyColor = availability2
 	}
