--- a/AT-Junkyards-Main/1875Expansion/SnarkParts/cabin_1p5/cabin_1p5.cfg
+++ b/AT-Junkyards-Main/1875Expansion/SnarkParts/cabin_1p5/cabin_1p5.cfg
@@ -2,7 +2,7 @@ PART
 {
 	name = microLabAtomicTech
 	module = Part
-	author = JadeOfMaar
+	author = JadeOfMaar, AtomicTech
 	MODEL
 	{
 		model = AT-Junkyards-Main/1875Expansion/SnarkParts/cabin_1p5/S1p5Hitchhiker
@@ -21,7 +21,7 @@ PART
 	manufacturer = AtomicTech Inc.
 	description = A member of the engineering team paid a visit to the AtomicTech Inc. Laboratories looking for a scientist who could help her with designing a new thermonuclear rocket engine. Upon entering the data entry wing of the building, our engineer was greeted to rows and rows of depressing cubicles. Struck with inspiration, she rushed back to the Von Kerman Institute of Engineering, where the AtomicTech Inc. Engineering Offices are located, and quickly gathered a team of engineers. They worked day and night, going through countless iterations, until arriving upon the final product. A recased Mark-1 Lander Can in a downsized Hitchhicker fairing and packed with scientific data analysis and collection tools and an assorted collection of chemicals and lab tools.
 	attachRules = 1,0,1,1,0
-	mass = 2
+	mass = 2.125
 	dragModelType = default
 	maximum_drag = 0.2
 	minimum_drag = 0.3
@@ -131,7 +131,7 @@ PART
 		usageReqMaskInternal = 1
 		usageReqMaskExternal = 8
 	}
-  MODULE
+	MODULE
 	{
 		name = ModuleEnviroSensor
 		sensorType = TEMP
@@ -153,7 +153,7 @@ PART
 		usageReqMaskInternal = 1
 		usageReqMaskExternal = 8
 	}
-  MODULE
+	MODULE
 	{
 		name = ModuleEnviroSensor
 		sensorType = PRES
@@ -175,7 +175,7 @@ PART
 		usageReqMaskInternal = 1
 		usageReqMaskExternal = 8
 	}
-  MODULE
+	MODULE
 	{
 		name = ModuleEnviroSensor
 		sensorType = GRAV
@@ -197,7 +197,7 @@ PART
 		usageReqMaskInternal = 1
 		usageReqMaskExternal = 8
 	}
-  MODULE
+	MODULE
 	{
 		name = ModuleScienceContainer
 		reviewActionName = Review Data
@@ -259,8 +259,8 @@ PART
 
 	MODULE
 	{
-    name = ModuleExperienceManagement
-    costPerKerbal = 0
+		name = ModuleExperienceManagement
+		costPerKerbal = 0
 	}
 
 
@@ -268,7 +268,7 @@ PART
 
 
 // IndicatorLights support (add crew indicators).
-@PART[crewCabin_1p5]:NEEDS[IndicatorLights]
+@PART[microLabAtomicTech]:NEEDS[IndicatorLights]
 {
 	//-------------------------------------------------------------------------
 	// INDICATOR MESHES
