--- a/AT-Junkyards-Main/radioactiveGreenhouse/Parts/ATGreenhouse5M.cfg
+++ b/AT-Junkyards-Main/radioactiveGreenhouse/Parts/ATGreenhouse5M.cfg
@@ -1,4 +1,4 @@
-PART:NEEDS[SnacksUtils]:AFTER[SnacksUtils]
+PART
 {
 	name = ATGreenhouse5M
 	module = Part
@@ -53,7 +53,7 @@ PART:NEEDS[SnacksUtils]:AFTER[SnacksUtils]
 		raycastTransformName = glass
 		pivotName = glass
 		isBreakable = false
-		resourceName = Light
+		resourceName = ElectricCharge
 		chargeRate = 2.2
 		powerCurve
 		{
@@ -73,7 +73,11 @@ PART:NEEDS[SnacksUtils]:AFTER[SnacksUtils]
 
 	vesselType = Station
 	
-  	RESOURCE
+}
+  
+@PART[ATGreenhouse5M]:NEEDS[SnacksUtils]
+{
+	RESOURCE
   	{
     		name = Snacks
     		amount = 10000
@@ -117,4 +121,3 @@ PART:NEEDS[SnacksUtils]:AFTER[SnacksUtils]
       		FlowMode = ALL_VESSEL
     	}
 }
-  
