Greenhouse bug fixes + ISP bugfixes

--- a/AT-Junkyards-Main/radioactiveGreenhouse/Parts/PSAGreenhouse375M.cfg
+++ b/AT-Junkyards-Main/radioactiveGreenhouse/Parts/PSAGreenhouse375M.cfg
@@ -1,4 +1,4 @@
-PART:NEEDS[SnacksUtils]:AFTER[SnacksUtils]
+PART
 {
 	name = PSAGreenhouse375
 	module = Part
@@ -20,7 +20,7 @@ PART:NEEDS[SnacksUtils]:AFTER[SnacksUtils]
 	subcategory = 0
 	title = GR33-I7 "Fry Archivist" Greenhouse
 	manufacturer = AtomicTech Inc.
-	description = The 3.75 Meter Fry Archivist Greenhouse is a rigid greenhouse for growning fresh food. Opening the shutters allows the greenhouse to use an advanced type of bioelectricity generator. Although this module isn\'t as impractically heavy as the five meter variant, it\'s recommended that this module be assembled in orbit by SimpleConstruction or Extraplanetary Launch Pads.
+	description = The 3.75 Meter Fry Archivist Greenhouse is a rigid greenhouse for growning fresh food. Opening the shutters allows the greenhouse to use an advanced type of bioelectricity generator. Although this module isn't as impractically heavy as the five meter variant, it's recommended that this module be assembled in orbit by SimpleConstruction or Extraplanetary Launch Pads.
 	
 	tags = PSA panarchist lifesupport snacks at atomictech atomic tech green house greenhouse fresh
 	attachRules = 1,1,1,1,0
@@ -34,11 +34,11 @@ PART:NEEDS[SnacksUtils]:AFTER[SnacksUtils]
 	breakingTorque= 500
 	maxTemp = 2000
 	bulkheadProfiles = size3
-	CrewCapacity = 2
+	CrewCapacity = 4
 
 	INTERNAL
 	{
-		name = landerCabinInternals
+		name = crewCabinInternals
 	}	
 	
 	MODULE
@@ -52,7 +52,7 @@ PART:NEEDS[SnacksUtils]:AFTER[SnacksUtils]
 		raycastTransformName = glass
 		pivotName = glass
 		isBreakable = false
-		resourceName = Light
+		resourceName = Electriccharge
 		chargeRate = 2.2
 		powerCurve
 		{
@@ -63,27 +63,6 @@ PART:NEEDS[SnacksUtils]:AFTER[SnacksUtils]
 		}
 	}
 
-	MODULE
-	{
-		name = ModuleGenerator
-		Label = Lighting
-		requiresAllInputs = true
-		activateGUIName = Lights On
-		shutdownGUIName = Lights Off
-		toggleActionName = Toggle Lights
-
-		INPUT_RESOURCE
-		{
-			name = ElectricCharge
-			rate = 7.7
-		}
-		OUTPUT_RESOURCE
-		{
-			name = Light
-			rate = 7.7
-		}
-	}
-
 	RESOURCE
 	{
 		name = ElectricCharge
@@ -91,50 +70,53 @@ PART:NEEDS[SnacksUtils]:AFTER[SnacksUtils]
 		maxAmount = 2250
 	}
 
-	vesselType = Station
-	
-  	RESOURCE
-  	{
-    		name = Snacks
-    		amount = 7500
-    		maxAmount = 7500
-  	}
-  	RESOURCE
-  	{
-    		name = Soil
-    		amount = 750
-    		maxAmount = 750
-  	}
-  	MODULE
-  	{
-    		name = SoilRecycler
-    		ConverterName = Snack Regenerator [Soil]
-    		StartActionName = Start Regenerator [Soil]
-    		StopActionName = Stop Regenerator [Soil]
-    		AutoShutdown = false
-    		GeneratesHeat = false
-    		UseSpecialistBonus = true
-    		ExperienceEffect = ConverterSkill
-    		EfficiencyBonus = 1.0
-    		RecyclerCapacity = 4
-    	INPUT_RESOURCE
-    	{
-      		ResourceName = Soil
-      		Ratio = 0.001
-      		FlowMode = ALL_VESSEL
-    	}
-    	INPUT_RESOURCE
-    	{
-      		ResourceName = ElectricCharge
-      		Ratio = 3
-      		FlowMode = STAGE_PRIORITY_FLOW
-    	}
-    	OUTPUT_RESOURCE
-    	{
-      		ResourceName = Snacks
-      		Ratio = 0.01875
-      		DumpExcess = false
-      		FlowMode = ALL_VESSEL
-    	}
-  }
+	vesselType = Station	
+}
   
+@PART[PSAGreenhouse375]:NEEDS[SnacksUtils]
+{
+  RESOURCE
+  {
+  	name = Snacks
+		amount = 7500
+  	maxAmount = 7500
+  }
+	RESOURCE
+	{
+  	name = Soil
+  	amount = 750
+		maxAmount = 750
+	}
+	MODULE
+	{
+		name = SoilRecycler
+		ConverterName = Snack Regenerator [Soil]
+		StartActionName = Start Regenerator [Soil]
+		StopActionName = Stop Regenerator [Soil]
+		AutoShutdown = false
+		GeneratesHeat = false
+		UseSpecialistBonus = true
+		ExperienceEffect = ConverterSkill
+		EfficiencyBonus = 1.0
+		RecyclerCapacity = 4
+    INPUT_RESOURCE
+    {
+      ResourceName = Soil
+    	Ratio = 0.001
+      FlowMode = ALL_VESSEL
+    }
+    INPUT_RESOURCE
+    {
+      ResourceName = ElectricCharge
+      Ratio = 3
+      FlowMode = STAGE_PRIORITY_FLOW
+    }
+    OUTPUT_RESOURCE
+    {
+    	ResourceName = Snacks
+     	Ratio = 0.01875
+    	DumpExcess = false
+    	FlowMode = ALL_VESSEL
+  	}
+  }
+}
