--- a/AT-Junkyards-Main/stockishConfigs/LVNRTG.cfg
+++ b/AT-Junkyards-Main/stockishConfigs/LVNRTG.cfg
@@ -7,6 +7,15 @@
   @MODULE
   {
     @maxThrust = 70
+    !atmosphereCurve
+		{
+		}
+    atmosphereCurve
+		{
+			key = 0 841
+			key = 1 300
+			key = 10 0.001
+		}
   }
   MODULE
   {
