--- a/AT-Junkyards-Main/stockishConfigs/UnmagicSRBs.cfg
+++ b/AT-Junkyards-Main/stockishConfigs/UnmagicSRBs.cfg
@@ -22,7 +22,7 @@
 //OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN THE
 //SOFTWARE.
 
-@PART[*]:HAS[@MODULE[ModuleEngines*]:HAS[#EngineType[SolidBooster]],!RESOURCE[LiquidFuel]]:LAST[KerbalWitchery] {
+@PART[*]:HAS[@MODULE[ModuleEngines*]:HAS[#EngineType[SolidBooster]],!RESOURCE[LiquidFuel] {
 	@cost *= 0.875
 	@MODULE[ModuleEngines*]:HAS[#EngineType[SolidBooster]] {
 		&useThrustCurve = true
