--- a/AT-Junkyards-Main/stockishConfigs/aerospikeGitsGud.cfg
+++ b/AT-Junkyards-Main/stockishConfigs/aerospikeGitsGud.cfg
@@ -2,13 +2,16 @@
 {
   @MODULE
   {
-    @atmosphereCurve
+    !atmosphereCurve
     {
-      @key = 0 360
-      @key = 1 310
-      @key = 5 240
-      @key = 10 170
-      @key = 20 50
+    }
+    atmosphereCurve
+    {
+      key = 0 360
+      key = 1 310
+      key = 5 240
+      key = 10 170
+      key = 20 50
     }
   }
 }
