--- a/AT-Junkyards-Main/radioactiveGreenhouse/Parts/ATGreenhouse5M.cfg
+++ b/AT-Junkyards-Main/radioactiveGreenhouse/Parts/ATGreenhouse5M.cfg
@@ -20,7 +20,7 @@ PART
 	subcategory = 0
 	title = Orbital "Veggie Table" Greenhouse Module
 	manufacturer = AtomicTech Inc.
-	description = The 5 Meter Fry Archivist Greenhouse is a rigid greenhouse for growning fresh food. Opening the shutters allows the greenhouse to use an advanced type of bioelectricity generator. The insane size and weight of this module makes it neary impractical to launch it into orbit. SimpleConstrution or Extraplanetary Launch Pads is recommended to assemble this in orbit.
+	description = The 5 Meter Orbital Greenhouse is a rigid greenhouse for growning fresh food. Opening the shutters allows the greenhouse to use an advanced type of bioelectricity generator. The insane size and weight of this module makes it neary impractical to launch it into orbit. SimpleConstrution or Extraplanetary Launch Pads is recommended to assemble this in orbit.
 	
 	tags = PSA panarchist lifesupport snacks atomic tech atomictech at green house greenhouse garden
 
@@ -35,11 +35,11 @@ PART
 	breakingTorque= 500
 	maxTemp = 2000
 	bulkheadProfiles = size3
-	CrewCapacity = 2
+	CrewCapacity = 4
 
 	INTERNAL
 	{
-		name = landerCabinInternals
+		name = crewCabinInternals
 	}	
 	
 	MODULE
@@ -78,46 +78,47 @@ PART
 @PART[ATGreenhouse5M]:NEEDS[SnacksUtils]
 {
 	RESOURCE
-  	{
-    		name = Snacks
-    		amount = 10000
-    		maxAmount = 10000
-  	}
-  	RESOURCE
-  	{
-    		name = Soil
-    		amount = 1000
-    		maxAmount = 1000
-  	}
-  	MODULE
-  	{
-    		name = SoilRecycler
-    		ConverterName = Snack Orbital Greenhouse [Soil]
-    		StartActionName = Start Orbital Greenhouse [Soil]
-    		StopActionName = Stop Orbital Greenhouse [Soil]
-    		AutoShutdown = false
-    		GeneratesHeat = false
-    		UseSpecialistBonus = true
-    		ExperienceEffect = ConverterSkill
-    		EfficiencyBonus = 1.0
-    		RecyclerCapacity = 4
-    	INPUT_RESOURCE
-    	{
-      		ResourceName = Soil
-      		Ratio = 0.015
-      		FlowMode = ALL_VESSEL
-    	}
-    	INPUT_RESOURCE
-    	{
-      		ResourceName = ElectricCharge
-      		Ratio = 7.5
-      		FlowMode = STAGE_PRIORITY_FLOW
-    	}
-    	OUTPUT_RESOURCE
-    	{
-      		ResourceName = Snacks
-      		Ratio = 0.0225
-      		DumpExcess = false
-      		FlowMode = ALL_VESSEL
-    	}
+  {
+    name = Snacks
+    amount = 10000
+    maxAmount = 10000
+  }
+  RESOURCE
+  {
+    name = Soil
+    amount = 1000
+    maxAmount = 1000
+  }
+  MODULE
+  {
+    name = SoilRecycler
+    ConverterName = Snack Orbital Greenhouse [Soil]
+    StartActionName = Start Orbital Greenhouse [Soil]
+    StopActionName = Stop Orbital Greenhouse [Soil]
+    AutoShutdown = false
+    GeneratesHeat = false
+    UseSpecialistBonus = true
+    ExperienceEffect = ConverterSkill
+    EfficiencyBonus = 1.0
+    RecyclerCapacity = 4
+    INPUT_RESOURCE
+    {
+      ResourceName = Soil
+      Ratio = 0.015
+      FlowMode = ALL_VESSEL
+    }
+    INPUT_RESOURCE
+    {
+      ResourceName = ElectricCharge
+      Ratio = 7.5
+      FlowMode = STAGE_PRIORITY_FLOW
+    }
+    OUTPUT_RESOURCE
+    {
+      ResourceName = Snacks
+      Ratio = 0.0225
+      DumpExcess = false
+    		FlowMode = ALL_VESSEL
+    }
+  }
 }
