--- a/AT-Junkyards-Main/radioactiveGreenhouse/Parts/PSAGreenhouse25.cfg
+++ b/AT-Junkyards-Main/radioactiveGreenhouse/Parts/PSAGreenhouse25.cfg
@@ -1,4 +1,4 @@
-PART:NEEDS[SnacksUtils]:AFTER[SnacksUtils]
+PART
 {
 	name = PSAGreenhouse25
 	module = Part
@@ -63,26 +63,6 @@ PART:NEEDS[SnacksUtils]:AFTER[SnacksUtils]
 			key = 0 0 0 0
 		}
 	}
-	MODULE
-	{
-		name = ModuleGenerator
-		Label = Lighting
-		requiresAllInputs = true
-		activateGUIName = Lights On
-		shutdownGUIName = Lights Off
-		toggleActionName = Toggle Lights
-
-		INPUT_RESOURCE
-		{
-			name = ElectricCharge
-			rate = 2.2
-		}
-		OUTPUT_RESOURCE
-		{
-			name = Light
-			rate = 2.2
-		}
-	}
 
 	RESOURCE
 	{
@@ -92,48 +72,52 @@ PART:NEEDS[SnacksUtils]:AFTER[SnacksUtils]
 	}
 
 	vesselType = Station
+}
 
-        RESOURCE
-        {
-          name = Snacks
-          amount = 5000
-          maxAmount = 5000
-        }
-        RESOURCE
-        {
-          name = Soil
-          amount = 500
-          maxAmount = 500
-        }
-  	MODULE
-  	{
-    		name = SoilRecycler
-    		ConverterName = Snack Regenerator [Soil]
-    		StartActionName = Start Regenerator [Soil]
-    		StopActionName = Stop Regenerator [Soil]
-    		AutoShutdown = false
-    		GeneratesHeat = false
-    		UseSpecialistBonus = true
-    		ExperienceEffect = ConverterSkill
-    		EfficiencyBonus = 1.0
-   		RecyclerCapacity = 4
-    		INPUT_RESOURCE
-    		{
-      			ResourceName = Soil
-      			Ratio = 0.0001
-      			FlowMode = ALL_VESSEL
-    		}
-   		INPUT_RESOURCE
-    		{
-      			ResourceName = ElectricCharge
-      			Ratio = 3
-      			FlowMode = STAGE_PRIORITY_FLOW
-    		}
-    		OUTPUT_RESOURCE
-    		{
-      			ResourceName = Snacks
-      			Ratio = Ratio = 0.0045
-      			DumpExcess = false
-      			FlowMode = ALL_VESSEL
-    	}
+@PART[PSAGreenhouse25]:NEEDS[SnacksUtils]
+{
+  RESOURCE
+  {
+    name = Snacks
+    amount = 5000
+    maxAmount = 5000
+  }
+  RESOURCE
+  {
+    name = Soil
+    amount = 500
+    maxAmount = 500
+  }
+  MODULE
+  {
+    name = SoilRecycler
+    ConverterName = Snack Regenerator [Soil]
+    StartActionName = Start Regenerator [Soil]
+    StopActionName = Stop Regenerator [Soil]
+    AutoShutdown = false
+    GeneratesHeat = false
+    UseSpecialistBonus = true
+    ExperienceEffect = ConverterSkill
+    EfficiencyBonus = 1.0
+   	RecyclerCapacity = 4
+    INPUT_RESOURCE
+    {
+      ResourceName = Soil
+      Ratio = 0.0001
+      FlowMode = ALL_VESSEL
+    }
+   	INPUT_RESOURCE
+    {
+      ResourceName = ElectricCharge
+      Ratio = 3
+      FlowMode = STAGE_PRIORITY_FLOW
+  	}
+    OUTPUT_RESOURCE
+    {
+    ResourceName = Snacks
+    Ratio = Ratio = 0.0045
+    DumpExcess = false
+    FlowMode = ALL_VESSEL
+    }
+  }
 }
