--- a/AT-Junkyards-Main/stockishConfigs/mk1CCScience.cfg
+++ b/AT-Junkyards-Main/stockishConfigs/mk1CCScience.cfg
@@ -59,8 +59,8 @@
 
 	MODULE
 	{
-        	name = ModuleExperienceManagement
-        	costPerKerbal = 0
+    name = ModuleExperienceManagement
+    costPerKerbal = 0
 	}
 
 	MODULE
@@ -110,6 +110,6 @@
   {
     name = ElectricCharge
     amount = 125
-    maxaAmount = 125
+    maxAmount = 125
   }
 }
